--- a/server_dev/requirements.txt
+++ b/server_dev/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 cpplint==1.5.5
 Django==4.0.2
+django-cors-headers==3.11.0
 djangorestframework==3.13.1
 ez-setup==0.9
 mysqlclient==2.1.0
